--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,9 +19,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="{{ "/assets/css/normalize.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/skeleton.css" | relative_url }}">
+  <script src="https://kit.fontawesome.com/1780dd6d31.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="{{ "/assets/images/logo.png" | relative_url }}">
 
-</head>
+</head></script>
