--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,16 @@
-<div class="section">
+<div class="section header">
 	<div class="container">
-		{% if page.logo == true %}
 		<img src="{{ "/assets/images/logo.png" | relative_url }}">
-		{% endif %}
 		<h3 class="section-heading">{{ page.title }}</h3>
 		<p class="section-description">
-			{{ page.descrpion }}
+			{{ page.description }}
 		</p>
-		{% assign mypages = site.pages | where: "type", "home" | sort: "order" %}
-		{% for page in mypages %}
-		<a class="button" href="{{ page.url | relative_url }}">{{ page.title }}</a>
-		{% endfor %}
+		<div id="navbar">
+			<img id="brand" src="{{ "/assets/images/logo.png" | relative_url }}">
+			{% assign mypages = site.pages | where: "type", "home" | sort: "order" %}
+			{% for page in mypages %}
+			<a class="button" href="{{ page.url | relative_url }}">{{ page.title }}</a>
+			{% endfor %}
+		</div>
 	</div>
 </div>
