--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 			{{ page.description }}
 		</p>
 		<div id="navbar">
-			<img id="brand" src="{{ "/assets/images/logo.png" | relative_url }}">
+			<img id="brand" class="hide" src="{{ "/assets/images/logo.png" | relative_url }}">
 			{% assign mypages = site.pages | where: "type", "home" | sort: "order" %}
 			{% for page in mypages %}
 			<a class="button" href="{{ page.url | relative_url }}">{{ page.title }}</a>
