--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,10 +19,16 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="{{ "/assets/css/normalize.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/skeleton.css" | relative_url }}">
-  <script src="https://kit.fontawesome.com/1780dd6d31.js"></script>
+  <script type="text/javascript" src="https://kit.fontawesome.com/1780dd6d31.js"></script>
+
+  <!-- IntersectionObserver polyfill -->
+<script src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script>
+
+<!-- Lozad.js from CDN -->
+<script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="{{ "/assets/images/logo.png" | relative_url }}">
 
-</head></script>
+</head>
