solved content jump

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,12 +5,14 @@
 		<p class="section-description">
 			{{ page.description }}
 		</p>
-		<div id="navbar">
-			<img id="brand" class="hide" src="{{ "/assets/images/logo.png" | relative_url }}">
-			{% assign mypages = site.pages | where: "type", "home" | sort: "order" %}
-			{% for page in mypages %}
-			<a class="button" href="{{ page.url | relative_url }}">{{ page.title }}</a>
-			{% endfor %}
+		<div id="navbar-wrapper">
+			<div id="navbar">
+				<img id="brand" class="hide" src="{{ "/assets/images/logo.png" | relative_url }}">
+				{% assign mypages = site.pages | where: "type", "home" | sort: "order" %}
+				{% for page in mypages %}
+				<a class="button" href="{{ page.url | relative_url }}">{{ page.title }}</a>
+				{% endfor %}
+			</div>
 		</div>
 	</div>
 </div>
