--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,31 +9,51 @@
         <p class="credit">made with <i class="fas fa-heart"></i> by Saumil Shah.</p>
     </div>
 </div>
+
+<!-- font-awesome -->
+<script type="text/javascript" src="https://kit.fontawesome.com/1780dd6d31.js"></script>
+
+<!-- IntersectionObserver polyfill -->
+<script src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script>
+
+<!-- Lozad.js -->
+<script src="https://cdn.jsdelivr.net/npm/lozad"></script>
+
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+
+<!-- sticky navbar -->
 <script type="text/javascript">
 window.onscroll = function() {myFunction()};
 
 var navbar = document.getElementById("navbar");
-var brand = document.getElementById("brand")
-var sticky = navbar.offsetTop + 130; // find y-pos of the navbar + margin to avoid jump
+var brand = document.getElementById("brand");
+var height = navbar.offsetHeight; // find height of the navbar
+var sticky = navbar.offsetTop + height; // find y-pos of the navbar
+
+var wrapper = document.getElementById("navbar-wrapper");
+wrapper.style.height = height + "px";
 
 function myFunction() {
   if (window.pageYOffset >= sticky) {
-    navbar.classList.add("sticky")
-    brand.classList.remove("hide")
+    navbar.classList.add("sticky");
+    brand.classList.remove("hide");
+    navbar.children
   } else {
     navbar.classList.remove("sticky");
-    brand.classList.add("hide")
+    brand.classList.add("hide");
   }
 }
 </script>
 
+<!-- sticky navbar -->
 <script type="text/javascript">
 // Initialize library
 lozad('.lozad', {
     load: function(el) {
         el.src = el.dataset.src;
         el.onload = function() {
-            el.classList.add('fade')
+            el.classList.add('fade');
         }
     }
 }).observe()
@@ -44,7 +64,7 @@ var observer = lozad('.lozad', {
     load: function(el) {
         el.src = el.getAttribute("data-src");
         el.onload = function() {
-            el.classList.add('fade')
+            el.classList.add('fade');
         }
     }
 })
@@ -59,10 +79,8 @@ observer.observe()
 pictureObserver.observe()
 </script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
-
+<!-- lightbox -->
 <script>
-
 //your code for stuff should go here
 if ( $(window).width() <= $(window).height() ) {
   $('#Fullscreen').css('width', $(window).width() + 'px');
@@ -83,5 +101,4 @@ $('.lozad').click(function() {
 $('#Fullscreen').click(function() {
   $(this).fadeOut(); //this will hide the fullscreen div if you click away from the image. 
 });
-
 </script>
