fixed offline path, cleaned up

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,33 @@
 	{% include header.html %}
  	<!-- Primary Page Layout
  	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	{{ content }}
+<div class="section main">
+	<div class="container">
+		<div class="row">
+			{% assign k = page.name.size | minus: 3 %}
+			{% assign n = page.name | slice: 0, k %}
+			{% assign coll = site.collections | where: "label", n | first %}
+			{% assign l = coll.files.size | divided_by: 2 | ceil %}
+			<div class="one-half column">
+				{% for image in coll.files limit: l %}
+				<article class="thumb">
+					<img class="lozad u-max-full-width" data-src="{{ coll.label | append: '/' | append: image.name | relative_url }}" alt="{{ image.basename }}" />
+				</article>
+				{% endfor %}
+			</div>
+			<div class="one-half column">
+				{% for image in coll.files offset: l %}
+				<article class="thumb">
+					<img class="lozad u-max-full-width" data-src="{{ coll.label | append: '/' | append: image.name | relative_url }}" alt="{{ image.basename }}" />
+				</article>
+				{% endfor %}
+			</div>
+		</div>
+	</div>
+</div>
+<div id="Fullscreen">
+	<img src="" alt="" />
+</div>
 	<!-- End Document
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	{% include footer.html %}
