--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>{{ page.title }} | {{ site.title }}</title>
+  <title>{{ page.title | capitalize }} | {{ site.title }}</title>
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="{{ site.author }}">
 
