--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@ function myFunction() {
   if (window.pageYOffset >= sticky) {
     navbar.classList.add("sticky");
     brand.classList.remove("hide");
-    brand.classList.remove("fade");
+    brand.classList.add("fade");
   } else {
     navbar.classList.remove("sticky");
     brand.classList.add("hide");
