--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		<div id="navbar-wrapper">
 			<div id="navbar">
 				<img id="brand" class="hide" src="{{ "/assets/images/logo.png" | relative_url }}">
-				{% assign mypages = site.pages | where: "type", "home" | sort: "order" %}
+				{% assign mypages = site.pages | where: "type", "parent" | sort: "order" %}
 				{% for page in mypages %}
 				<a class="button" href="{{ page.url | relative_url }}">{{ page.title }}</a>
 				{% endfor %}
