--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 			{% assign k = page.name.size | minus: 3 %}
 			{% assign n = page.name | slice: 0, k %}
 			{% assign coll = site.collections | where: "label", n | first %}
+			{% assign list = coll.files | sort: "basename" %}
 			{% assign l = coll.files.size | divided_by: 2 | ceil %}
 			<div class="one-half column">
 				{% for image in coll.files limit: l %}
