--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@
 			{% assign coll = site.collections | where: "label", n | first %}
 			{% assign list = coll.files | sort: "basename" %}
 			{% assign l = coll.files.size | divided_by: 2 | ceil %}
-			<div class="one-half column">
+			<div class="one-half column" id="col1">
 				{% for image in coll.files limit: l %}
 				<article class="thumb">
 					<img class="lozad u-max-full-width" data-src="{{ coll.label | append: '/' | append: image.name | relative_url }}" alt="{{ image.basename }}" />
 				</article>
 				{% endfor %}
 			</div>
-			<div class="one-half column">
+			<div class="one-half column" id="col2">
 				{% for image in coll.files offset: l %}
 				<article class="thumb">
 					<img class="lozad u-max-full-width" data-src="{{ coll.label | append: '/' | append: image.name | relative_url }}" alt="{{ image.basename }}" />
@@ -30,9 +30,6 @@
 			</div>
 		</div>
 	</div>
-</div>
-<div id="Fullscreen">
-	<img src="" alt="" />
 </div>
 	<!-- End Document
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
