--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <div class="section header">
 	<div class="container">
-		<img src="{{ "/assets/images/logo.png" | relative_url }}">
+		<img src="{{ "/assets/img/logo.svg" | relative_url }}">
 		<h3 class="section-heading">{{ page.title }}</h3>
 		<p class="section-description">
 			{{ page.description }}
 		</p>
 		<div id="navbar-wrapper">
 			<div id="navbar">
-				<img id="brand" class="hide" src="{{ "/assets/images/logo.png" | relative_url }}">
+				<img id="brand" class="hide" src="{{ "/assets/img/logo.svg" | relative_url }}">
 				{% assign mypages = site.pages | where: "type", "parent" | sort: "order" %}
 				{% for page in mypages %}
 				<a class="button" href="{{ page.url | relative_url }}">{{ page.title }}</a>
