gallery of row childs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,20 +8,20 @@
 <div class="section main">
 	<div class="container">
 		{{ page.body | markdownify }}
-		<div class="row">
+		<div class="row" id="gallery">
 			{% assign k = page.name.size | minus: 3 %}
 			{% assign n = page.name | slice: 0, k %}
 			{% assign coll = site.collections | where: "label", n | first %}
 			{% assign list = coll.files | sort: "basename" %}
 			{% assign l = coll.files.size | divided_by: 2 | ceil %}
-			<div class="one-half column" id="col1">
+			<div class="one-half column">
 				{% for image in coll.files limit: l %}
 				<article class="thumb">
 					<img class="lozad u-max-full-width" data-src="{{ coll.label | append: '/' | append: image.name | relative_url }}" alt="{{ image.basename }}" />
 				</article>
 				{% endfor %}
 			</div>
-			<div class="one-half column" id="col2">
+			<div class="one-half column">
 				{% for image in coll.files offset: l %}
 				<article class="thumb">
 					<img class="lozad u-max-full-width" data-src="{{ coll.label | append: '/' | append: image.name | relative_url }}" alt="{{ image.basename }}" />
