--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
             <a href="mailto:dishap71@gmail.com"><i class="fas fa-paper-plane"></i></a>
         </div>
         <p>Copyright <i class="fas fa-copyright"></i> 2019 All Rights Reserved.</p>
-        <p class="credit">Made with <i class="fas fa-heart"></i> by Saumil Shah.</p>
+        <p class="credit">Made with <i class="fas fa-heart"></i> by <a target="_blank" href="https://samd97.github.io">Saumil Shah</a>.</p>
     </div>
 </div>
 
@@ -76,7 +76,7 @@ pictureObserver.observe()
 
 
 <!-- jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <!-- lightgallery -->
 <script type="text/javascript" src="{{ "/assets/lightgallery.js" | relative_url }}"></script>
