mobile friendly menu and pseudo-progressive image load

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
 			{{ page.description }}
 		</p>
 		<div id="navbar-wrapper">
-			<div id="navbar">
-				<img id="brand" class="hide" src="{{ "/assets/img/logo.svg" | relative_url }}">
+			<div id="navbar" class="close">
+				<a onclick="menuExpand()"><img id="brand" class="hide" src="{{ "/assets/img/logo.svg" | relative_url }}"></a>
 				{% assign mypages = site.pages | where: "type", "parent" | sort: "order" %}
 				{% for page in mypages %}
 				<a class="button" href="{{ page.url | relative_url }}">{{ page.title }}</a>
