adapted for varun video gallery

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,75 +3,77 @@
         <img src="{{ "/assets/img/logo_dark.svg" | relative_url }}">
         <p class="section-description">Get in touch.</p>
         <div class="social">
-            <a href="https://www.instagram.com/diisshhaashh/"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:dishap71@gmail.com"><i class="fas fa-paper-plane"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:samdon97@gmail.com"><i class="fas fa-paper-plane"></i></a>
         </div>
-        <p>Copyright <i class="fas fa-copyright"></i> 2019 All Rights Reserved.</p>
-        <p class="credit">Made with <i class="fas fa-heart"></i> by <a target="_blank" href="https://samd97.github.io">Saumil Shah</a>.</p>
+        <p>Copyright <i class="fas fa-copyright"></i> {{ "now" | date: "%Y" }} All Rights Reserved.</p>
+        <p class="credit">Made with <i class="fas fa-heart"></i> by <a target="_blank"
+                href="https://saumil-sh.github.io">Saumil Shah</a>.</p>
     </div>
 </div>
 
 <!-- IntersectionObserver polyfill -->
-<script src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script>
+<script
+    src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script>
 
 <!-- Lozad -->
 <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 <!-- sticky navbar -->
 <script type="text/javascript">
-window.onscroll = function() {myFunction()};
+    window.onscroll = function () { myFunction() };
 
-var navbar = document.getElementById("navbar");
-var brand = document.getElementById("brand");
-var height = navbar.offsetHeight; // find height of the navbar
-var sticky = navbar.offsetTop + height; // find y-pos of the navbar
+    var navbar = document.getElementById("navbar");
+    var brand = document.getElementById("brand");
+    var height = navbar.offsetHeight; // find height of the navbar
+    var sticky = navbar.offsetTop + height; // find y-pos of the navbar
 
-var wrapper = document.getElementById("navbar-wrapper");
-wrapper.style.height = height + "px";
+    var wrapper = document.getElementById("navbar-wrapper");
+    wrapper.style.height = height + "px";
 
-function myFunction() {
-  if (window.pageYOffset >= sticky) {
-    navbar.classList.add("sticky");
-    brand.classList.remove("hide");
-    brand.classList.add("fade");
-  } else {
-    navbar.classList.remove("sticky");
-    brand.classList.add("hide");
-  }
-}
+    function myFunction() {
+        if (window.pageYOffset >= sticky) {
+            brand.classList.add("fade");
+            brand.classList.remove("hide");
+            navbar.classList.add("sticky");
+        } else {
+            navbar.classList.remove("sticky");
+            brand.classList.add("hide");
+        }
+    }
 </script>
 
 <!-- lazy loading -->
 <script type="text/javascript">
-// Initialize library
-lozad('.lozad', {
-    load: function(el) {
-        el.src = el.dataset.src;
-        el.onload = function() {
-            el.classList.add('fade');
+    // Initialize library
+    lozad('.lozad', {
+        load: function (el) {
+            el.src = el.dataset.src;
+            el.onload = function () {
+                el.classList.add('fade');
+            }
         }
-    }
-}).observe()
+    }).observe()
 
-// Initialize library to lazy load images
-var observer = lozad('.lozad', {
-    threshold: 0.1,
-    load: function(el) {
-        el.src = el.getAttribute("data-src");
-        el.onload = function() {
-            el.classList.add('fade');
+    // Initialize library to lazy load images
+    var observer = lozad('.lozad', {
+        threshold: 0.1,
+        load: function (el) {
+            el.src = el.getAttribute("data-src");
+            el.onload = function () {
+                el.classList.add('fade');
+            }
         }
-    }
-})
+    })
 
-// Picture observer
-// with default `load` method
-var pictureObserver = lozad('.lozad-picture', {
-    threshold: 0.1
-})
+    // Picture observer
+    // with default `load` method
+    var pictureObserver = lozad('.lozad-picture', {
+        threshold: 0.1
+    })
 
-observer.observe()
-pictureObserver.observe()
+    observer.observe()
+    pictureObserver.observe()
 </script>
 
 
@@ -96,13 +98,13 @@ pictureObserver.observe()
 
 <script type="text/javascript">
     function menuExpand() {
-  var x = document.getElementById("navbar");
-  if (x.className === "close sticky") {
-    x.className = "open sticky";
-  } else {
-    x.className = "close sticky";
-  }
-}
+        var x = document.getElementById("navbar");
+        if (x.className === "close sticky") {
+            x.className = "open sticky";
+        } else {
+            x.className = "close sticky";
+        }
+    }
 </script>
 
 <!-- font-awesome -->
