--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,21 +11,14 @@
 		<div class="row" id="gallery">
 			{% assign k = page.name.size | minus: 3 %}
 			{% assign n = page.name | slice: 0, k %}
-			{% assign coll = site.collections | where: "label", n | first %}
-			{% assign list = coll.files | sort: "basename" %}
-			{% assign l = coll.files.size | divided_by: 2 | ceil %}
 			<div class="one-half column">
-				{% for image in coll.files limit: l %}
-				<article class="thumb">
-					<img class="lozad u-max-full-width" data-src="{{ coll.label | append: '/' | append: image.name | relative_url }}" alt="{{ image.basename }}" />
-				</article>
+				{% for link in page.links %}
+				<iframe width="480" height="270" src="https://www.youtube.com/embed/{{ link }}" title="The Science of Coffee" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				{% endfor %}
 			</div>
 			<div class="one-half column">
-				{% for image in coll.files offset: l %}
-				<article class="thumb">
-					<img class="lozad u-max-full-width" data-src="{{ coll.label | append: '/' | append: image.name | relative_url }}" alt="{{ image.basename }}" />
-				</article>
+				{% for link in page.links %}
+				<iframe width="480" height="270" src="https://www.youtube.com/embed/{{ link }}" title="The Science of Coffee" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				{% endfor %}
 			</div>
 		</div>
