correct layout for about.md

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,9 @@
         <img src="{{ "/assets/img/logo_dark.svg" | relative_url }}">
         <p class="section-description">Get in touch.</p>
         <div class="social">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:samdon97@gmail.com"><i class="fas fa-paper-plane"></i></a>
+            <a href="https://www.instagram.com/varun.manavazhi/"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/varunmanavazhi"><i class="fab fa-twitter"></i></a>
+            <!-- <a href="mailto:samdon97@gmail.com"><i class="fas fa-paper-plane"></i></a> -->
         </div>
         <p>Copyright <i class="fas fa-copyright"></i> {{ "now" | date: "%Y" }} All Rights Reserved.</p>
         <p class="credit">Made with <i class="fas fa-heart"></i> by <a target="_blank"
@@ -13,8 +14,7 @@
 </div>
 
 <!-- IntersectionObserver polyfill -->
-<script
-    src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script>
+<!-- <script src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script> -->
 
 <!-- Lozad -->
 <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
@@ -76,25 +76,24 @@
     pictureObserver.observe()
 </script>
 
-
 <!-- jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 
 <!-- lightgallery -->
-<script type="text/javascript" src="{{ "/assets/lightgallery.js" | relative_url }}"></script>
+<!-- <script type="text/javascript" src="{{ " /assets/lightgallery.js" | relative_url }}"></script> -->
 
 <!-- cross-browser mousewheel -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script> -->
 
 <!-- lightgallery call -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     $('#gallery').lightGallery({
         selector: '.lozad',
         speed: 200,
         mode: 'lg-fade',
         download: false
     });
-</script>
+</script> -->
 
 <script type="text/javascript">
     function menuExpand() {
