--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,28 +1,23 @@
 <head>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Basic Page Needs -->
   <meta charset="utf-8">
   <title>{{ page.title | capitalize }} | {{ site.title }}</title>
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="{{ site.author }}">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- FONT -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/css/normalize.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/skeleton.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/lightgallery.css" | relative_url }}">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Favicon  -->
   <link rel="icon" type="image/svg" href="{{ "/assets/img/logo.svg" | relative_url }}">
 
 </head>
