--- a/_layouts/parent.html
+++ b/_layouts/parent.html
@@ -3,11 +3,9 @@
 {% include head.html %}
 <body>
 	{% include header.html %}
- 	<!-- Primary Page Layout
- 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+ 	<!-- Primary Page Layout -->
 	{{ content }}
-	<!-- End Document
-	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	{% include footer.html %} 
+	<!-- End Document -->
+	{% include footer.html %}
 </body>
 </html>
