--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,29 +3,37 @@
 {% include head.html %}
 <body>
 	{% include header.html %}
- 	<!-- Primary Page Layout
- 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="section main">
-	<div class="container">
-		{{ page.body | markdownify }}
-		<div class="row" id="gallery">
-			{% assign k = page.name.size | minus: 3 %}
-			{% assign n = page.name | slice: 0, k %}
-			<div class="one-half column">
-				{% for link in page.links %}
-				<iframe width="480" height="270" src="https://www.youtube.com/embed/{{ link }}" title="The Science of Coffee" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				{% endfor %}
-			</div>
-			<div class="one-half column">
-				{% for link in page.links %}
-				<iframe width="480" height="270" src="https://www.youtube.com/embed/{{ link }}" title="The Science of Coffee" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				{% endfor %}
+	<!-- Primary Page Layout -->
+
+	<div class="section main">
+		<div class="container">
+			{{ page.body | markdownify }}
+			<div class="row" id="gallery">
+				{% assign k = page.name.size | minus: 3 %}
+				{% assign n = page.name | slice: 0, k %}
+				<div class="one-half column">
+					{% for link in page.links %}
+					<iframe width="480" height="270"
+						src="https://www.youtube.com/embed/{{ link }}"
+						title="The Science of Coffee" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen></iframe>
+					{% endfor %}
+				</div>
+				<div class="one-half column">
+					{% for link in page.links %}
+					<iframe width="480" height="270"
+						src="https://www.youtube.com/embed/{{ link }}"
+						title="The Science of Coffee" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen></iframe>
+					{% endfor %}
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
-	<!-- End Document
-	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+	<!-- End Document -->
 	{% include footer.html %}
 </body>
 </html>
