--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,11 @@
 
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
+  {% if page.order == 1 %}
+  <title>{{ site.title }}</title>
+  {% else %}
   <title>{{ page.title | capitalize }} | {{ site.title }}</title>
+  {% endif%}
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="{{ site.author }}">
 
