lite-youtube embeds and some template changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,12 +13,6 @@
     </div>
 </div>
 
-<!-- IntersectionObserver polyfill -->
-<!-- <script src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script> -->
-
-<!-- Lozad -->
-<script src="https://cdn.jsdelivr.net/npm/lozad"></script>
-
 <!-- sticky navbar -->
 <script type="text/javascript">
     window.onscroll = function () { myFunction() };
@@ -43,58 +37,6 @@
     }
 </script>
 
-<!-- lazy loading -->
-<script type="text/javascript">
-    // Initialize library
-    lozad('.lozad', {
-        load: function (el) {
-            el.src = el.dataset.src;
-            el.onload = function () {
-                el.classList.add('fade');
-            }
-        }
-    }).observe()
-
-    // Initialize library to lazy load images
-    var observer = lozad('.lozad', {
-        threshold: 0.1,
-        load: function (el) {
-            el.src = el.getAttribute("data-src");
-            el.onload = function () {
-                el.classList.add('fade');
-            }
-        }
-    })
-
-    // Picture observer
-    // with default `load` method
-    var pictureObserver = lozad('.lozad-picture', {
-        threshold: 0.1
-    })
-
-    observer.observe()
-    pictureObserver.observe()
-</script>
-
-<!-- jQuery -->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
-
-<!-- lightgallery -->
-<!-- <script type="text/javascript" src="{{ " /assets/lightgallery.js" | relative_url }}"></script> -->
-
-<!-- cross-browser mousewheel -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script> -->
-
-<!-- lightgallery call -->
-<!-- <script type="text/javascript">
-    $('#gallery').lightGallery({
-        selector: '.lozad',
-        speed: 200,
-        mode: 'lg-fade',
-        download: false
-    });
-</script> -->
-
 <script type="text/javascript">
     function menuExpand() {
         var x = document.getElementById("navbar");
@@ -105,6 +47,37 @@
         }
     }
 </script>
+<!-- end sticky navbar -->
+
+<!-- lazy loading -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+
+<script type="text/javascript">
+// Initialize library
+const observer = lozad(); // lazy loads elements with default selector as '.lozad'
+observer.observe();
+
+// Initialize library to lazy load images
+lozad('.lozad', {
+    load: function(el) {
+        console.log('loading element');
+
+        // Custom implementation to load an element
+        // e.g. el.src = el.getAttribute('data-src');
+        el.src = el.getAttribute("data-src");
+            el.onload = function () {
+                el.classList.add('fade');
+            }
+
+    }
+});
+</script>
+<!-- end lazy loading -->
+
+<!-- lite-youtube -->
+<script type="module" src="https://cdn.jsdelivr.net/npm/@justinribeiro/lite-youtube@1.5.0/lite-youtube.js"></script>
+
+<!-- end lite-youtube -->
 
 <!-- font-awesome -->
 <script type="text/javascript" src="https://kit.fontawesome.com/1780dd6d31.js"></script>
