templating and content improvements

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
         </div>
         <p>Copyright <i class="fas fa-copyright"></i> {{ "now" | date: "%Y" }} All Rights Reserved.</p>
         <p class="credit">Made with <i class="fas fa-heart"></i> by <a target="_blank"
-                href="https://saumil-sh.github.io">Saumil Shah</a>.</p>
+                href="https://github.com/saumil-sh">Saumil Shah</a>.</p>
     </div>
 </div>
 
